Custom--app/main/default/objects/Residence__c/fields/SameStore__c.field-meta.xml
<CustomField>
    <fullName>SameStore__c</fullName>
    <formula>Most_Recent_Yardi_Rent_Roll__r.SameStore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Store</label>
    <type>Text</type>
</CustomField>