Custom--app/main/default/objects/Residence__c/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <label>School District</label>
    <length>250</length>
    <type>Text</type>
</CustomField>