Custom--app/main/default/objects/Residence__c/fields/Square_Feet_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet_Prior_Value__c</fullName>
    <label>Square Feet Prior Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>