Custom--app/main/default/objects/Residence__c/fields/State_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>State_Prior_Value__c</fullName>
    <label>State Prior Value</label>
    <length>2</length>
    <type>Text</type>
</CustomField>