Custom--app/main/default/objects/Residence__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <inlineHelpText>Enter the name of the subdivision.</inlineHelpText>
    <label>Subdivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>