Custom--app/main/default/objects/Residence__c/fields/SWAY__c.field-meta.xml
<CustomField>
    <fullName>SWAY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is true when Market2 is in Dallas, Denver, Houston, and Nashville.</description>
    <label>SWAY</label>
    <type>Checkbox</type>
</CustomField>