Custom--app/main/default/objects/Residence__c/fields/test_k__c.field-meta.xml
<CustomField>
    <fullName>test_k__c</fullName>
    <label>test__k</label>
    <length>100</length>
    <type>Text</type>
</CustomField>