Custom--app/main/default/objects/Residence__c/fields/THR_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>THR_Support_Email__c</fullName>
    <defaultValue>"THRSupport@invitationhomes.com"</defaultValue>
    <inlineHelpText>This field is used in Residence and Portfolio Email Alerts pertaining to changes to fields as noted in Support Requests (Regional Controller Queues).</inlineHelpText>
    <label>THR Support Email</label>
    <type>Email</type>
</CustomField>