Custom--app/main/default/objects/Residence__c/fields/Trash_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Trash_Service_Provider__c</fullName>
    <label>Trash Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>