Custom--app/main/default/objects/Residence__c/fields/Unit_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Unit_Prior_Value__c</fullName>
    <label>Unit Prior Value</label>
    <length>32</length>
    <type>Text</type>
</CustomField>