Custom--app/main/default/objects/Residence__c/fields/Watch_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Watch_List_Notes__c</fullName>
    <label>Watch List Notes</label>
    <type>TextArea</type>
</CustomField>