Custom--app/main/default/objects/Residence__c/fields/Water_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter_Number__c</fullName>
    <label>Water Meter #</label>
    <length>155</length>
    <type>Text</type>
</CustomField>