Custom--app/main/default/objects/Residence__c/fields/Water_Notes__c.field-meta.xml
<CustomField>
    <fullName>Water_Notes__c</fullName>
    <label>Water Notes</label>
    <type>TextArea</type>
</CustomField>