Custom--app/main/default/objects/Residence__c/fields/Water_Provider__c.field-meta.xml
<CustomField>
    <fullName>Water_Provider__c</fullName>
    <label>Water Provider</label>
    <length>150</length>
    <type>Text</type>
</CustomField>