Custom--app/main/default/objects/Residence__c/fields/Win_Date__c.field-meta.xml
<CustomField>
    <fullName>Win_Date__c</fullName>
    <label>Win Date</label>
    <type>Date</type>
</CustomField>