Custom--app/main/default/objects/Residence__c/fields/Yardi_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code__c</fullName>
    <formula>Current_Portfolio__r.Yardi_Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yardi Property Code</label>
    <type>Text</type>
</CustomField>