Custom--app/main/default/objects/Residence__c/fields/Year_Blt__c.field-meta.xml
<CustomField>
    <fullName>Year_Blt__c</fullName>
    <description>This is a formula field that translates the year built number field (Year_Built__c) into text to it can be displayed on the page layout without a comma.</description>
    <formula>TEXT(Year_Built__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Blt</label>
    <type>Text</type>
</CustomField>