Custom--app/main/default/objects/Residence__c/fields/Year_Built_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Year_Built_Prior_Value__c</fullName>
    <label>Year Built Prior Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>