Custom--app/main/default/objects/Residence__c/fields/YRR_Current_Tenant_Status__c.field-meta.xml
<CustomField>
    <fullName>YRR_Current_Tenant_Status__c</fullName>
    <formula>Most_Recent_Yardi_Rent_Roll__r.Current_Tenant_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field reflects Yardi as of the import this AM. (Changes in Yardi made today will be reflected in sf.com tomorrow.)</inlineHelpText>
    <label>YRR-Current Tenant Status</label>
    <type>Text</type>
</CustomField>