Custom--app/main/default/objects/Residence__c/fields/YRR_Unit_Rental_Type__c.field-meta.xml
<CustomField>
    <fullName>YRR_Unit_Rental_Type__c</fullName>
    <formula>Most_Recent_Yardi_Rent_Roll__r.Unit_Rental_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field reflects Yardi as of the import this AM. (Changes in Yardi made today will be reflected in sf.com tomorrow.)</inlineHelpText>
    <label>YRR-Unit Rental Type</label>
    <type>Text</type>
</CustomField>