Custom--app/main/default/objects/Residence__c/fields/ZipPlus4__c.field-meta.xml
<CustomField>
    <fullName>ZipPlus4__c</fullName>
    <label>ZipPlus4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>