Custom--app/main/default/objects/Residence__c/validationRules/Parent_Residence_is_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Residence_is_not_required</fullName>
    <active>true</active>
    <description>If Parent Residence is present, and if Child Unit is false or Parent Structure is false, through error.</description>
    <errorConditionFormula>NOT(ISBLANK( Parent_Residence__c )) &amp;&amp; ( NOT( Child_Unit__c ) ||  Parent_Structure__c )</errorConditionFormula>
    <errorMessage>If Parent Residence is present, Child Unit should be checked and Parent Structure should be unchecked.</errorMessage>
</ValidationRule>