Custom--app/main/default/objects/Residence__c/validationRules/Parent_Structure_cannot_be_child_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Structure_cannot_be_child_Unit</fullName>
    <active>true</active>
    <errorConditionFormula>Parent_Structure__c &amp;&amp;  Child_Unit__c</errorConditionFormula>
    <errorMessage>A Parent Structure cannot be a Child Unit</errorMessage>
</ValidationRule>