Custom--app/main/default/objects/Residence__c/listViews/AZ_Bidder_APN_Scrub.listView-meta.xml
<ListView>
    <fullName>AZ_Bidder_APN_Scrub</fullName>
    <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>APN__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Subdivision__c</columns>
    <columns>HOA_Options__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Baths__c</columns>
    <columns>Square_Feet__c</columns>
    <columns>Lot_Sq_Ft__c</columns>
    <columns>Pool__c</columns>
    <columns>AC_or_Evap__c</columns>
    <columns>Roof_Type__c</columns>
    <columns>Parking__c</columns>
    <columns>Year_Built__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Atlanta</value>
    </filters>
    <filters>
        <field>Atlanta_Auction__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>APN__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>APN__c</field>
        <operation>contains</operation>
        <value>check,dup,dupe,not found</value>
    </filters>
    <label>AZ Bidder APN Scrub</label>
    <sharedTo>
        <group>Region_Atlanta</group>
    </sharedTo>
</ListView>