Custom--app/main/default/objects/Residence__c/listViews/Current_Portfolio_Not_Blank.listView-meta.xml
<ListView>
    <fullName>Current_Portfolio_Not_Blank</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>APN__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Address_Zip_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Portfolio__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Current Portfolio Not Blank</label>
</ListView>