Custom--app/main/default/objects/Residence__c/listViews/Invalid_Addresses.listView-meta.xml
<ListView>
    <fullName>Invalid_Addresses</fullName>
    <columns>NAME</columns>
    <columns>APN__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Address_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address_Validated_Successfully__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Address_Validated_Last_Attempt__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Invalid Addresses</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>