Custom--app/main/default/objects/Residence__c/listViews/Invalid_Nationals.listView-meta.xml
<ListView>
    <fullName>Invalid_Nationals</fullName>
    <columns>NAME</columns>
    <columns>APN__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Address_Zip_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Region_Formula__c</columns>
    <columns>My_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>National</value>
    </filters>
    <label>Invalid Nationals</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>