Custom--app/main/default/objects/Residence__c/listViews/MN_and_Chicago.listView-meta.xml
<ListView>
    <fullName>MN_and_Chicago</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Current_Portfolio__c</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Chicago,Minneapolis</value>
    </filters>
    <filters>
        <field>Yardi_Property_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>MN and Chicago</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>