Custom--app/main/default/objects/Residence__c/listViews/My_Region_s_Residences.listView-meta.xml
<ListView>
    <fullName>My_Region_s_Residences</fullName>
    <columns>NAME</columns>
    <columns>APN__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Address_Zip_Code__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Region__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>My Region's Residences</label>
</ListView>