Custom--app/main/default/objects/Residence__c/listViews/Parent_Residences.listView-meta.xml
<ListView>
    <fullName>Parent_Residences</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>APN__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Address_Zip_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Structure__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Residences</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>