Custom--app/main/default/objects/Residence__c/listViews/Residence_Non_Validated_Address.listView-meta.xml
<ListView>
    <fullName>Residence_Non_Validated_Address</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_Unit__c</columns>
    <columns>Address_Validation_Message__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Address_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address_Validated_Street__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Current_Portfolio__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Residence Non Validated Address w Portf</label>
</ListView>