Custom--app/main/default/objects/Residence__c/listViews/ResidenceAPNView.listView-meta.xml
<ListView>
    <fullName>ResidenceAPNView</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>APN__c</columns>
    <columns>APN_Search__c</columns>
    <columns>APN_Unique__c</columns>
    <columns>Address_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Residence APN View</label>
</ListView>