Custom--app/main/default/objects/Residence__c/listViews/Residences_w_HOA_s_but_marked_no.listView-meta.xml
<ListView>
    <fullName>Residences_w_HOA_s_but_marked_no</fullName>
    <columns>NAME</columns>
    <columns>Address_Street__c</columns>
    <columns>Region__c</columns>
    <columns>HOA_Options__c</columns>
    <columns>HOA_Primary__c</columns>
    <columns>HOA_Parent__c</columns>
    <columns>HOA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HOA_Options__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>HOA_Primary__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Inland Empire</value>
    </filters>
    <label>Residences Needing HOA Info</label>
    <sharedTo>
        <role>Team_Member_Inland_Empire</role>
    </sharedTo>
</ListView>