Custom--app/main/default/objects/Residence__c/listViews/Utilities_for_All_Rehabs.listView-meta.xml
<ListView>
    <fullName>Utilities_for_All_Rehabs</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6 and 7</booleanFilter>
    <columns>NAME</columns>
    <columns>Most_Recent_Rehab__c</columns>
    <columns>Most_Recent_Rehab_Stage__c</columns>
    <columns>Electricity_Provider__c</columns>
    <columns>Electric_Status__c</columns>
    <columns>Electric_Meter_Number__c</columns>
    <columns>Gas_Provider__c</columns>
    <columns>Gas_Status__c</columns>
    <columns>Gas_Meter_Number__c</columns>
    <columns>Water_Provider__c</columns>
    <columns>Water_Status__c</columns>
    <columns>Water_Meter_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Most_Recent_Rehab__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Electric_Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed On</value>
    </filters>
    <filters>
        <field>Water_Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed On</value>
    </filters>
    <filters>
        <field>Gas_Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed On</value>
    </filters>
    <filters>
        <field>Gas_Status__c</field>
        <operation>notEqual</operation>
        <value>N/A</value>
    </filters>
    <filters>
        <field>Most_Recent_Rehab_Stage__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>My_Region__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Utilities for All Rehabs</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>